--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -1,1 +1,51 @@
-#2
+大家好，我是小主，这里是blisss期刊的第二期。
+
+在上一期中，初步介绍了一下预编译这个东东。简单介绍了预编译器的功能，作用；之后简单介绍了一下css的几个流行的预编译器，还重点提了sass这款。虽然说使用预编译并不是必须，但是使用它确确实实可以大大提高我们的工作效率，总结一下呢就是有如下几个优点：
+
+1. 能够提高我们的开发效率，不必再为烦人的样式嵌套担心；
+2. 可以作为源代码管理，一定意义上可以做到可复用（reuseable）；
+3. 为团队合作提供了种种可能性，可以一定程度上避免不必要的麻烦；
+
+其实缺点也是显而易见的，那就是需要编译，使用起来是有点麻烦，说白了就是需要配置一套工具。当然，我们会在之后的期刊中介绍常用构建工具的用法。
+
+在这次的期刊中我们还是主要介绍sass的语法，以及一些css上面的技巧。
+
+学习笔记
+------------
+
+首先我们要知道一点关于sass的东西，那就是sass其实有两个版本：ruby sass和libsass。ruby sass是用ruby语言开发，所以里面一些语法也有ruby的影子，不过不必担心，毕竟是一个css的预编译，所以需要掌握的语法还是很少的，现在的版本是4.11.1左右；而libsass是由c++作为底层开发，有点就是比基于ruby的ruby sass编译速度要快，但是他的版本有点低，相当于ruby sass版本的3.2左右，有一些新的语法是没办法使用的，比如map、&这些。社区有说法是ruby sass现在的开发进度放缓，等libsass的版本赶上，但不管怎样，我们这里只介绍基于ruby sass的东东。
+
+至于说sass的安装这里也就不说太多，显然ruby sass是需要安装ruby的。那么我们这就开始了解sass的语法。
+
+我们来想想样式表中的值有哪些形式。首先最简单的就是数值类型，font-size，padding这些；然后是字符串形式，比如说font-family，这些都是很常用的；然后还有一些复合值，比如说现在的transition，border等等这些看上去应该是列表形式。所以我们总结一下，css中的值类型基本是{Number}、{String}、{List}。sass和css对应，我们知道sass中可以定义变量，那么变量的类型也是这三种构成。在sass中，定义变量的方式是由$符号开头，比如：
+
+  $base-font-size: 14px;
+  $base-font-family: "微软雅黑";
+  $simple-transition: all .2s ease-in-out;
+  
+我想聪明的你应该很一看就明白，然而使用变量的方式也是$符号开头比如像下面这样：
+
+  $nav-bar-bg-color: #ccc;
+  
+  .nav {
+    background-color: $nav-bar-bg-color;
+  }
+  
+上面就是变量作为值使用。但是变量不仅仅可以作为值，还可以作为属性，甚至选择器上面都可以使用：
+
+  $namespace: blisss;
+  
+  .#{$namespace}-nav {
+    padding: 1em;
+  }
+  
+这样我们为.nav的类增加了一个前缀，现在变成了.blisss-nav。上面例子中的#{}实际上是一个字符串插值的东东，花括号里面可以是任意的**表达式**，这个语法是ruby中的，类似于'.' + $namespace + '-nav'这样，不过要注意的是表达式这个概念。我们同样可以把这种方式用在属性上面，比如说我想给属性加厂商前缀，可以这么做：
+
+  @mixin perfix($prop, $val) {
+    -webkit-#{$prop}: $val;
+       -moz-#{$prop}: $val;
+            #{$prop}: $val;
+  }
+  
+上面是一个mixin语法，我们会在下周介绍。需要注意的一点是，如果我们的变量要作为属性或是选择器，那么使用的时候要放在#{}里面，而值却不需要，为什么？大家自己实践一下就明白了。
+
