--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -10,42 +10,142 @@
 
 在这次的期刊中我们还是主要介绍sass的语法，以及一些css上面的技巧。
 
-学习笔记
+学习 Note
 ------------
 
-首先我们要知道一点关于sass的东西，那就是sass其实有两个版本：ruby sass和libsass。ruby sass是用ruby语言开发，所以里面一些语法也有ruby的影子，不过不必担心，毕竟是一个css的预编译，所以需要掌握的语法还是很少的，现在的版本是4.11.1左右；而libsass是由c++作为底层开发，有点就是比基于ruby的ruby sass编译速度要快，但是他的版本有点低，相当于ruby sass版本的3.2左右，有一些新的语法是没办法使用的，比如map、&这些。社区有说法是ruby sass现在的开发进度放缓，等libsass的版本赶上，但不管怎样，我们这里只介绍基于ruby sass的东东。
+首先我们要知道一点关于sass的东西，那就是sass其实有两个版本：ruby sass和libsass。ruby sass是用ruby语言开发，所以里面一些语法也有ruby的影子，不过不必担心，毕竟是一个css的预编译，所以需要掌握的语法还是很少的，现在的版本是4.11.1左右；而libsass是由c++作为底层开发，有点就是比基于ruby的ruby sass编译速度要快，但是他的版本有点低，相当于ruby sass版本的3.2左右，有一些新的语法是没``办法使用的，比如map、&这些。社区有说法是ruby sass现在的开发进度放缓，等libsass的版本赶上，但不管怎样，我们这里只介绍基于ruby sass的东东。
 
 至于说sass的安装这里也就不说太多，显然ruby sass是需要安装ruby的。那么我们这就开始了解sass的语法。
 
 我们来想想样式表中的值有哪些形式。首先最简单的就是数值类型，font-size，padding这些；然后是字符串形式，比如说font-family，这些都是很常用的；然后还有一些复合值，比如说现在的transition，border等等这些看上去应该是列表形式。所以我们总结一下，css中的值类型基本是{Number}、{String}、{List}。sass和css对应，我们知道sass中可以定义变量，那么变量的类型也是这三种构成。在sass中，定义变量的方式是由$符号开头，比如：
 
-  $base-font-size: 14px;
-  $base-font-family: "微软雅黑";
-  $simple-transition: all .2s ease-in-out;
+      $base-font-size: 14px;
+      $base-font-family: "微软雅黑";
+      $simple-transition: all .2s ease-in-out;
   
 我想聪明的你应该很一看就明白，然而使用变量的方式也是$符号开头比如像下面这样：
 
-  $nav-bar-bg-color: #ccc;
-  
-  .nav {
-    background-color: $nav-bar-bg-color;
-  }
+      $nav-bar-bg-color: #ccc;
+      
+      .nav {
+        background-color: $nav-bar-bg-color;
+      }
   
 上面就是变量作为值使用。但是变量不仅仅可以作为值，还可以作为属性，甚至选择器上面都可以使用：
 
-  $namespace: blisss;
-  
-  .#{$namespace}-nav {
-    padding: 1em;
-  }
+      $namespace: blisss;
+      
+      .#{$namespace}-nav {
+    	padding: 1em;
+      }
   
 这样我们为.nav的类增加了一个前缀，现在变成了.blisss-nav。上面例子中的#{}实际上是一个字符串插值的东东，花括号里面可以是任意的**表达式**，这个语法是ruby中的，类似于'.' + $namespace + '-nav'这样，不过要注意的是表达式这个概念。我们同样可以把这种方式用在属性上面，比如说我想给属性加厂商前缀，可以这么做：
 
-  @mixin perfix($prop, $val) {
-    -webkit-#{$prop}: $val;
-       -moz-#{$prop}: $val;
-            #{$prop}: $val;
-  }
+      @mixin perfix($prop, $val) {
+        -webkit-#{$prop}: $val;
+           -moz-#{$prop}: $val;
+      		    #{$prop}: $val;
+      }
   
-上面是一个mixin语法，我们会在下周介绍。需要注意的一点是，如果我们的变量要作为属性或是选择器，那么使用的时候要放在#{}里面，而值却不需要，为什么？大家自己实践一下就明白了。
+上面是一个mixin语法，我们将在下周介绍。需要注意的一点是，如果我们的变量要作为属性或是选择器，那么使用的时候要放在#{}里面，而值却不需要，为什么？大家自己实践一下就明白了。
 
+接下来我要给大家介绍下一个基础变量类型，那就是{Map}。这个功能是在4.X加
+入的，再次强调，libsass还没有这个功能。那么map到底是什么呢？我们可以像
+下面这样定义：
+
+	$size: (
+	  "small": 12px,
+	  "medium": 14px,
+	  "large": 16px
+	);
+
+这看上去就是Hash，没错，map是有键和值构成的，有点像js里面的json。map使
+用最多的应该就是对于响应式断点的定义：
+
+	$breakpoint: (
+	  "sm": 320px,
+	  "md": 768px,
+	  "lg": 1020px
+	);
+
+然后我们可以使用sass的内置函数对map取值：
+
+	@media (max-width: map-get('md')) {  }
+
+map-get是sass提供的一个内置函数，sass提供了很多内置函数，比如颜色等等，
+我们也可以定义自己的函数，具体会在下周介绍。
+
+map的另一个更广泛的作用就是作用于循环，会在稍后说明。
+
+说到语法，那么if条件语句是不能少的。sass为我们提供了@if条件语句，我们
+可以像下面这样使用：
+
+	$enable-export-class: true;
+
+	@if $enable-export-class {
+	  .hide { disable: none; }
+	}
+
+当然有@if，那肯定有@else if和@else，就和我们别的语言语法那样使用就可以
+了。不过需要说明一点的是，@if不需要括号，不需要不是说不可以，我们可以
+像下面这么用：
+
+	@if $size == 1em { ... }
+
+条件语句固然强大，但sass最变态的地方，其实是循环语句，这是其他预编译期
+做不到的，还记得我们第一期那个@for循环么？sass为我们提供了两种循环，
+@for和@each。@for循环一般用于步进循环，比如h1-h6，使用语法就像我们上期
+那个例子一样，由于使用的比较少，这里就不多说了。@each循环可以循环
+{List}、{Map}，功能很强大。比如我们想要写一些常用工具类输出一些颜色，
+首先我们先定义一个{Map}变量：
+
+	$color: (
+	  "red": #ef5350,
+	  "blue": #42a5f5,
+	  "green": #66bb6a
+	);
+
+接着我们要做成工具类：
+
+	@each $key, $value in $color {
+	  .#{$key} {
+	    background-color: $value;
+	  }
+	}
+
+这样我们编译之后可以得到如下的输出：
+
+	.red   { background-color: #ef5350 }
+	.blue  { background-color: #42a5f5 }
+	.green { background-color: #66bb6a }
+
+是不是很强大。
+
+这次的sass语法的基础，就介绍到这里，当然还没有结束，下期会给大家带来语法基础（二），主要来说mixin function extend 和 &的用法。
+
+技巧 Trick
+--------------
+
+这是一个新开的版块，用来介绍一些常用的技巧，主要还是css方面的。本期给大家带来的是有关height的一些东西。
+
+我们知道css中height代表高度，通常我们会定义一个固定像素，比如height: 200px;那么如果想使用流式布局使用百分比会怎样呢？比如:
+
+	.main { height: 30%; }
+
+通过实践可以发现，这么写没用，main这个容器并没有被赋予30%的高度，为什么呢？
+
+我们从字面意思上加以解释，main的高度是30%的意思应该是main所在容器高度的30%；那么如果我们假设main的容器就是body根元素，很显然，body的height我们并没有实际指定，那么body的height应该是默认值auto。
+
+那这下就好办了，我们需要给body也指定高度:
+
+	body { height: 100%; }
+
+但是这样做还是不行，应该body的容器**html**的height还是auto，所以还要做下面的更改：
+
+	html, body { height: 100%; }
+
+这样我们的main终于实现了流式的高度。
+
+所以我们得到一个结论，如果想给一个元素给予百分比高度，那么必须让他的**所有**父级容器的高度都不能为auto。我们在布局类似控制台界面的时候常常会遇到这个问题。
+
+这次的内容就是这些，祝大家新年快乐！
