--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -13,7 +13,7 @@
 学习 Note
 ------------
 
-首先我们要知道一点关于sass的东西，那就是sass其实有两个版本：ruby sass和libsass。ruby sass是用ruby语言开发，所以里面一些语法也有ruby的影子，不过不必担心，毕竟是一个css的预编译，所以需要掌握的语法还是很少的，现在的版本是4.11.1左右；而libsass是由c++作为底层开发，有点就是比基于ruby的ruby sass编译速度要快，但是他的版本有点低，相当于ruby sass版本的3.2左右，有一些新的语法是没``办法使用的，比如map、&这些。社区有说法是ruby sass现在的开发进度放缓，等libsass的版本赶上，但不管怎样，我们这里只介绍基于ruby sass的东东。
+首先我们要知道一点关于sass的东西，那就是sass其实有两个版本：ruby sass和libsass。ruby sass是用ruby语言开发，所以里面一些语法也有ruby的影子，不过它毕竟是一个css的预编译，所以需要掌握的语法还是很少的，现在的版本是4.11.1左右；而libsass是由c++作为底层开发，libsass的优点就是比ruby sass编译速度快，但目前它的版本有点低，相当于ruby sass版本的3.2，有一些新的语法是没办法使用的，比如map、&这些。社区有说法是ruby sass现在的开发进度放缓，等libsass的版本赶上，但不管怎样，我们这里只介绍基于ruby sass的东东。
 
 至于说sass的安装这里也就不说太多，显然ruby sass是需要安装ruby的。那么我们这就开始了解sass的语法。
 
@@ -75,7 +75,7 @@
 map-get是sass提供的一个内置函数，sass提供了很多内置函数，比如颜色等等，
 我们也可以定义自己的函数，具体会在下周介绍。
 
-map的另一个更广泛的作用就是作用于循环，会在稍后说明。
+map的另一个更广泛的作用就是用于循环，会在稍后说明。
 
 说到语法，那么if条件语句是不能少的。sass为我们提供了@if条件语句，我们
 可以像下面这样使用：
@@ -92,10 +92,10 @@ map的另一个更广泛的作用就是作用于循环，会在稍后说明。
 
 	@if $size == 1em { ... }
 
-条件语句固然强大，但sass最变态的地方，其实是循环语句，这是其他预编译期
+条件语句固然强大，但sass最变态的地方，其实是循环语句，这是其他预编译器
 做不到的，还记得我们第一期那个@for循环么？sass为我们提供了两种循环，
 @for和@each。@for循环一般用于步进循环，比如h1-h6，使用语法就像我们上期
-那个例子一样，由于使用的比较少，这里就不多说了。@each循环可以循环
+那个例子一样，由于使用的比较少，这里就不多说了。@each循环可以遍历
 {List}、{Map}，功能很强大。比如我们想要写一些常用工具类输出一些颜色，
 首先我们先定义一个{Map}变量：
 
@@ -121,9 +121,9 @@ map的另一个更广泛的作用就是作用于循环，会在稍后说明。
 
 是不是很强大。
 
-这次的sass语法的基础，就介绍到这里，当然还没有结束，下期会给大家带来语法基础（二），主要来说mixin function extend 和 &的用法。
+这次的sass语法的基础，就介绍到这里，当然还没有结束，下期会给大家带来语法基础（二），主要来说mixin function extend 和 & 的用法。
 
-技巧 Trick
+技巧 Tricks
 --------------
 
 这是一个新开的版块，用来介绍一些常用的技巧，主要还是css方面的。本期给大家带来的是有关height的一些东西。
