--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -1,12 +1,12 @@
 大家好，我是小主，这里是blisss期刊的第二期。
 
-在上一期中，初步介绍了一下预编译这个东东。简单介绍了预编译器的功能，作用；之后简单介绍了一下css的几个流行的预编译器，还重点提了sass这款。虽然说使用预编译并不是必须，但是使用它确确实实可以大大提高我们的工作效率，总结一下呢就是有如下几个优点：
+在上一期中，初步介绍了一下预编译这个东东。简单介绍了预编译器的功能，之后简单介绍了一下css的几个流行的预编译器，还重点提了sass这款。虽然说使用预编译并不是必须，但是使用它确确实实可以大大提高我们的工作效率，总结一下呢就是有如下几个优点：
 
 1. 能够提高我们的开发效率，不必再为烦人的样式嵌套担心；
-2. 可以作为源代码管理，一定意义上可以做到可复用（reuseable）；
-3. 为团队合作提供了种种可能性，可以一定程度上避免不必要的麻烦；
+2. 可以作为源代码管理，一定意义上可以做到可复用（reusable）；
+3. 为团队合作提供了种种可能性，在一定程度上避免不必要的麻烦；
 
-其实缺点也是显而易见的，那就是需要编译，使用起来是有点麻烦，说白了就是需要配置一套工具。当然，我们会在之后的期刊中介绍常用构建工具的用法。
+其实sass的缺点也是显而易见的，那就是需要编译，使用起来是有点麻烦，说白了就是需要配置一套工具。当然，我们会在之后的期刊中介绍常用构建工具的用法。
 
 在这次的期刊中我们还是主要介绍sass的语法，以及一些css上面的技巧。
 
