--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -140,7 +140,7 @@ map的另一个更广泛的作用就是用于循环，会在稍后说明。
 
 	body { height: 100%; }
 
-但是这样做还是不行，应该body的容器**html**的height还是auto，所以还要做下面的更改：
+但是这样做还是不行，因为body的容器**html**的height还是auto，所以还要做下面的更改：
 
 	html, body { height: 100%; }
 
