--- a/##2015-02-22##.md
+++ b/##2015-02-22##.md
@@ -146,6 +146,6 @@ map的另一个更广泛的作用就是用于循环，会在稍后说明。
 
 这样我们的main终于实现了流式的高度。
 
-所以我们得到一个结论，如果想给一个元素给予百分比高度，那么必须让他的**所有**父级容器的高度都不能为auto。我们在布局类似控制台界面的时候常常会遇到这个问题。
+所以我们得到一个结论，如果想给一个元素给予百分比高度，那么必须让他的**所有**父级容器的高度都**不能为auto**。我们在布局类似控制台界面的时候常常会遇到这个问题。
 
 这次的内容就是这些，祝大家新年快乐！
