Update #3 sass基础语法（二） 2015-03-01.md
nothing wrong with here

--- a/#3 sass基础语法（二） 2015-03-01.md
+++ b/#3 sass基础语法（二） 2015-03-01.md
@@ -4,7 +4,7 @@ Duang!Duang!Duang~ 大家好，我是小主，这里是第三期。
 
 1.	变量，使用$符号定义。可以定义{Number}，{String}，{List}，{Map}四种类型的变量；
 2.	条件语句，@if、@else if和@else。和其他语言类似的条件语句；
-3.	循环语句，@for、@each、@while。虽然@while并没有介绍，不过我想有编程基础的你想想就会明白，这里@each循环使用较多，可以循环{List}和{Map}。
+3.	循环语句，@for、@each、@while。虽然@while并没有介绍，不过我想有编程基础的你想想就会明白，这里@each循环使用较多，可以遍历{List}和{Map}。
 
 在这期中，我会给大家介绍sass剩下的一些语法，包括@mixin、@extend、@function和一些常用的内置函数。
 
