Update #4 sass基础语法（三） 2015-03-08.md

--- a/#4 sass基础语法（三） 2015-03-08.md
+++ b/#4 sass基础语法（三） 2015-03-08.md
@@ -1,15 +1,10 @@
 大家好，这里是期刊第四期。
 
-上一期中给大家介绍了一些sass算是非常常用的两个内容**@mixin**和**@extend**，说
-实话，我也是冲mixin来的，有了mixin确实可以大大提高效率，减少代码量，让
-自己的sass源码更好维护。在知道了基础语法和mixin之后，终于可以经行一些
-实战来加深对sass的理解，所以在这期中，我们要了解的是缩进、&和BEM的一些
-东东。
+上一期中给大家介绍了一些sass算是非常常用的两个内容**@mixin**和**@extend**，说实话，我也是冲mixin来的，有了mixin确实可以大大提高效率，减少代码量，让自己的sass源码更好维护。在知道了基础语法和mixin之后，终于可以经行一些实战来加深对sass的理解，所以在这期中，我们要了解的是缩进、&和BEM的一些东东。
 
 ##学习 Note
 
-css里面选择器的嵌套对大家一定都不陌生，比如<ul>与<li>，我们也常常会使
-用，比如下面这个例子：
+css里面选择器的嵌套对大家一定都不陌生，比如<ul>与<li>，我们也常常会使用，比如下面这个例子：
 
 ```html
 <div class="layout">
@@ -27,8 +22,7 @@ css里面选择器的嵌套对大家一定都不陌生，比如<ul>与<li>，我
 .layout .item .content { ... }
 ```
 
-如果我们的样式表有上千行，看上去会感觉很乱，layout出现了太多次。不过
-sass为我们提供了嵌套的写法：
+如果我们的样式表有上千行，看上去会感觉很乱，layout出现了太多次。不过sass为我们提供了嵌套的写法：
 
 ```sass
 .layout {
@@ -46,15 +40,9 @@ sass为我们提供了嵌套的写法：
 
 虽然嵌套很好用，不过最好不要嵌套太多层，要**保持嵌套层数最少**才是正确的选择。
 
-嵌套的sass写在父级的大括号里面，看到大括号会情不自禁的想到一个东西，没
-错，是作用域。还记得我们在#2中提到的变量么？有了这些大括号，我们的变量，
-mixin，extend就有了作用域，在大括号里定义的这些东西，也只能在同级和下
-级类使用了。
+嵌套的sass写在父级的大括号里面，看到大括号会情不自禁的想到一个东西，没错，是作用域。还记得我们在#2中提到的变量么？有了这些大括号，我们的变量，mixin，extend就有了作用域，在大括号里定义的这些东西，也只能在同级和下级类使用了。
 
-那既然有作用域这个概念，是不是还有上下文this这个东东呢？是的，虽然这里
-并不是准确的this，不过可以用**&**符号来表示当前的类名。还记得伪类这个
-概念么？after，before，元素悬浮时有hover，文本框有focus。想想我们用css
-是如何定义的：
+那既然有作用域这个概念，是不是还有上下文this这个东东呢？是的，虽然这里并不是准确的this，不过可以用**&**符号来表示当前的类名。还记得伪类这个概念么？after，before，元素悬浮时有hover，文本框有focus。想想我们用css是如何定义的：
 
 ```css
 .btn { background-color: #ddd; }
@@ -130,5 +118,8 @@ mixin，extend就有了作用域，在大括号里定义的这些东西，也只
     <div class="model"></div>
   </div>
 </div>
+```
 
-如果我们d1,d2没有定义position，那么model会正好出现在屏幕中间；如果d1定义了position: relative;d2没有定义，那么model会出现在d1中心，
+如果我们d1,d2没有定义position，那么model会正好出现在屏幕中间；如果d1定义了position: relative;d2没有定义，那么model会出现在d1中心;同理，如果d2定义了，那就会出现在d2中心。
+
+现在我们知道了，原来他是在找父级容器哪里有position。这也是为什么模态框一般要放在最高层的原因。
