Update #4 sass基础语法（三） 2015-03-08.md

--- a/#4 sass基础语法（三） 2015-03-08.md
+++ b/#4 sass基础语法（三） 2015-03-08.md
@@ -4,7 +4,7 @@
 
 ##学习 Note
 
-css里面选择器的嵌套对大家一定都不陌生，比如<ul>与<li>，我们也常常会使用，比如下面这个例子：
+css里面选择器的嵌套对大家一定都不陌生，比如&lt;ul&gt;与&lt;li&gt;，我们也常常会使用，比如下面这个例子：
 
 ```html
 <div class="layout">
