Update #4 sass基础语法（三） 2015-03-08.md

--- a/#4 sass基础语法（三） 2015-03-08.md
+++ b/#4 sass基础语法（三） 2015-03-08.md
@@ -98,7 +98,7 @@ css里面选择器的嵌套对大家一定都不陌生，比如&lt;ul&gt;与&lt;
 
 还记得前几期中提到的height问题么？那么现在我们又遇到一个类似的问题，那就是position定位。
 
-我们可能在布局模态框的时候碰到这种问题，为什么模态框的容器要放在最顶层呢？比如</body>上面。
+我们可能在布局模态框的时候碰到这种问题，为什么模态框的容器要放在最顶层呢？比如&lt;/body&gt;上面。
 
 下面是一个模态框的样式：
 
