--- a/#4 sass基础语法（三） 2015-03-08.md
+++ b/#4 sass基础语法（三） 2015-03-08.md
@@ -123,3 +123,5 @@ css里面选择器的嵌套对大家一定都不陌生，比如&lt;ul&gt;与&lt;
 如果我们d1,d2没有定义position，那么model会正好出现在屏幕中间；如果d1定义了position: relative;d2没有定义，那么model会出现在d1中心;同理，如果d2定义了，那就会出现在d2中心。
 
 现在我们知道了，原来他是在找父级容器哪里有position。这也是为什么模态框一般要放在最高层的原因。
+
+所以我们在使用position: absolute;的时候一定要考虑一下父标签有没有position；反过来我们想绝对定位在某个父标签下，只要给那个容器加position: relative;就可以了。
